# python-velbustcp

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt  requirements_dev.txt  settings.json  settings.json.template  setup.cfg  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: tests.yaml
lib/: consts.py  ntp.py  packetexcluder.py  packetparser.py  settings.py
lib/connection/: bridge.py  bus.py  client.py  network.py
src/velbustcp/: __main__.py  settings.py
src/velbustcp/lib/: consts.py  signals.py
src/velbustcp/lib/connection/: bridge.py  bus.py  client.py  clientconnection.py  network.py
src/velbustcp/lib/connection/newserial/: bus.py  serialprotocol.py  writerthread.py
src/velbustcp/lib/connection/serial/: bus.py  events.py  factory.py  serialprotocol.py  writerthread.py
src/velbustcp/lib/connection/tcp/: client.py  clientconnection.py  events.py  network.py  networkmanager.py
src/velbustcp/lib/ntp/: ntp.py
src/velbustcp/lib/packet/: packetbuffer.py  packetcache.py  packetexcluder.py  packetparser.py  utils.py
src/velbustcp/lib/packet/handlers/: busstatus.py
src/velbustcp/lib/settings/: logging.py  network.py  ntp.py  serial.py  settings.py
src/velbustcp/lib/util/: util.py
tests/: test_packetbuffer.py  test_packetexcluder.py  test_packetparser.py
tests/settings/: test_logging.py  test_network.py  test_ntp.py
tests/velbustcp/lib/connection/: test_bridge.py
tests/velbustcp/lib/packet/: test_packetbuffer.py  test_packetcache.py  test_packetexcluder.py  test_packetparser.py  test_utils.py
tests/velbustcp/lib/settings/: test_logging.py  test_networksettings.py  test_ntp.py  test_serial.py
tests/velbustcp/lib/util/: test_util.py
(+8 files in other folders)
