[metadata]
name = python_velbustcp
description = Bridge a Velbus installation with TCP
author = Velleman NV

[options]
packages = find_namespace:
install_requires =
    pyserial==3.4
    pytz==2021.3
    tzlocal==3.0.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
velbustcp = py.typed

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.2.5
    pytest-cov>=2.12.1
    pytest-mock>=3.6.1
    mypy>=0.910
    flake8>=3.9.2
    tox>=3.24.3
    typing-extensions>=4.0.0

[flake8]
max-line-length = 160