[metadata]
name = python_velbustcp
description = Bridge a Velbus installation with TCP
author = Velleman Group nv
version = 0.0.0

[options]
packages = find_namespace:
install_requires =
    pyserial==3.5
    blinker==1.6.1
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.package_data]
velbustcp = py.typed

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.3.1
    pytest-cov>=4.1.0
    pytest-mock>=3.10.0
    mypy>=1.3.0
    flake8>=6.0.0
    tox>=4.6.0
    typing-extensions>=4.6.3

[options.entry_points]
console_scripts = 
    velbustcp = velbustcp.__main__:main

[flake8]
max-line-length = 160